# REM

./: .cursorrules  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
benchmarks/: convomem.py  locomo.py  longmemeval.py  run_all.py
benchmarks/adapters/: rem_adapter.py
dashboard/: next.config.js  package-lock.json  package.json  tailwind.config.js
dashboard/src/app/: globals.css  layout.tsx  metadata.ts  opengraph-image.tsx  page.tsx
dashboard/src/app/dashboard/: layout.tsx  page.tsx
dashboard/src/components/: nav-menu.tsx  testimonial-scroll.tsx
dashboard/src/components/dashboard/: ConsolidationQueue.tsx  DomainChart.tsx  HealthGauge.tsx  LiveFeed.tsx  MetricsRow.tsx  RecentFeed.tsx  StatsRow.tsx
dashboard/src/components/episodes/: EpisodeCard.tsx  EpisodeDrawer.tsx  FilterBar.tsx
dashboard/src/components/graph/: GraphLegend.tsx  GraphTooltip.tsx  MemoryGraph.tsx
dashboard/src/components/landing/: BenchmarkSection.tsx  CodeSection.tsx  CodeSnippet.tsx  FeatureGrid.tsx  FeaturesGrid.tsx  Footer.tsx  (+5 more)
dashboard/src/lib/: agent-context.tsx  api.ts  config.tsx  demo-data.ts  site.ts  types.ts  utils.ts
docs/: api-reference.md  quickstart.md
go-api/: Dockerfile  go.mod  go.sum
go-api/cmd/api/: main.go
go-api/internal/api/: router.go
go-api/internal/config/: config.go
go-api/internal/domain/: agent.go  episode.go  semantic_memory.go  user.go
go-api/internal/services/: embed_service.go  graph_service.go  parse_service.go  retrieve_service.go  write_service.go
go-api/tests/: integration_test.go
python-worker/: Dockerfile  main.py  requirements.txt
python-worker/api/: router.py
python-worker/api/handlers/: consolidate.py  embed.py  parse.py
python-worker/services/: embed_service.py  llm_service.py  parse_service.py
python-worker/services/consolidation/: clusterer.py  compressor.py  engine.py
python-worker/workers/: celery_app.py  tasks.py
scripts/: init_neo4j.py  init_qdrant.py  seed_demo.py
sdk/python/: README.md  pyproject.toml
sdk/python/rem_memory/: __init__.py  client.py  exceptions.py  types.py
sdk/python/rem_memory/integrations/: autogen.py  langchain.py
(+54 files in other folders)
